<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		register
	 *	@date 		Thursday 11th of May 2023 02:00:54 PM
	 *	@title 		Login App UI Kit
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/register" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_register_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__register_ek2"
					android:background="@drawable/_bg__register_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="375dp"
					android:layout_height="812dp" />

				<TextView android:id="@+id/already_have_an_account__login_now"

					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="15sp"
					android:textColor="@color/already_have_an_account__login_now_color"
					android:layout_marginLeft="58dp"
					android:layout_marginTop="765dp"
					android:layout_width="266dp"
					android:layout_height="31.5dp"
					android:text="@string/already_have_an_account__login_now_string"
					 />


				<RelativeLayout android:id="@+id/register_with"
					android:layout_marginTop="616dp"
					android:layout_marginStart="22dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/__img___google"
						android:src="@drawable/__img___google"
						android:contentDescription="__img___google"
						 android:layout_marginStart="113dp"
						android:layout_marginTop="39dp"
						android:layout_width="105dp"
						android:layout_height="56dp" />

					<ImageView android:id="@+id/__img___facebook"
						android:src="@drawable/__img___facebook"
						android:contentDescription="__img___facebook"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="39dp"
						android:layout_width="105dp"
						android:layout_height="56dp" />

					<ImageView android:id="@+id/__img___apple"
						android:src="@drawable/__img___apple"
						android:contentDescription="__img___apple"
						 android:layout_marginStart="226dp"
						android:layout_marginTop="39dp"
						android:layout_width="105dp"
						android:layout_height="56dp" />


					<RelativeLayout android:id="@+id/register_with_ek1"
						android:layout_marginTop="0dp"
						android:layout_marginStart="0dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<TextView android:id="@+id/or_register_with"

							android:textStyle="bold"
							android:textSize="14sp"
							android:textColor="@color/or_register_with_color"
							android:layout_marginLeft="115dp"
							android:layout_marginTop="0dp"
							android:layout_width="120dp"
							android:layout_height="27dp"
							android:text="@string/or_register_with_string"
							 />

						<View   android:id="@+id/line_1"
							android:background="@drawable/line_1_shape"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="9dp"
							android:layout_width="103dp"
							android:layout_height="1dp" />

						<View   android:id="@+id/line_2"
							android:background="@drawable/line_2_shape"
							 android:layout_marginStart="228dp"
							android:layout_marginTop="9dp"
							android:layout_width="103dp"
							android:layout_height="1dp" />

					</RelativeLayout>

				</RelativeLayout>


				<RelativeLayout android:id="@+id/register__button_"
					android:layout_marginTop="525dp"
					android:layout_marginStart="22dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<Button   android:id="@+id/rectangle_173"
						android:background="@drawable/rectangle_173_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="331dp"
						android:layout_height="56dp" />

					<TextView android:id="@+id/register_ek3"

						android:textStyle="bold"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="15sp"
						android:textColor="@color/_bg__register_ek2_color"
						android:layout_marginLeft="135dp"
						android:layout_marginTop="19dp"
						android:layout_width="68dp"
						android:layout_height="28.5dp"
						android:text="@string/register_ek3_string"
						 />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/confirm_password__input_"
					android:layout_marginTop="439dp"
					android:layout_marginStart="22dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<EditText   android:id="@+id/rectangle_4"
						android:background="@drawable/rectangle_4_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:hint="Confirm password"
						android:textColorHint="@color/confirm_password_color"
						android:textSize="20dp"
						android:gravity="center|left"
						android:paddingStart="10dp"
						android:layout_width="333dp"
						android:layout_height="58dp" />



				</RelativeLayout>


				<RelativeLayout android:id="@+id/password__input_"
					android:layout_marginTop="371dp"
					android:layout_marginStart="22dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<EditText   android:id="@+id/rectangle_4_ek1"
						android:background="@drawable/rectangle_4_ek1_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:hint="Password"
						android:textSize="20dp"
						android:gravity="center|left"
						android:paddingStart="10dp"
						android:textColorHint="@color/confirm_password_color"
						android:layout_width="333dp"
						android:layout_height="58dp" />



				</RelativeLayout>


				<RelativeLayout android:id="@+id/email__input_"
					android:layout_marginTop="303dp"
					android:layout_marginStart="22dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<EditText   android:id="@+id/rectangle_4_ek2"
						android:background="@drawable/rectangle_4_ek2_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:textSize="20dp"
						android:gravity="center|left"
						android:paddingStart="10dp"
						android:layout_width="333dp"
						android:textColorHint="@color/confirm_password_color"
						android:hint="Email"
						android:layout_height="58dp" />



				</RelativeLayout>


				<RelativeLayout android:id="@+id/username__input_"
					android:layout_marginTop="235dp"
					android:layout_marginStart="22dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<EditText   android:id="@+id/rectangle_4_ek3"
						android:background="@drawable/rectangle_4_ek3_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="333dp"
						android:textSize="20dp"
						android:gravity="center|left"
						android:paddingStart="10dp"
						android:textColorHint="@color/confirm_password_color"
						android:hint="@string/username_string"
						android:layout_height="58dp" />



				</RelativeLayout>


				<RelativeLayout android:id="@+id/text"
					android:layout_marginTop="125dp"
					android:layout_marginStart="22dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<TextView android:id="@+id/hello__register_to_get_started"

						android:textStyle="bold"
						android:textSize="20sp"
						android:textColor="@color/already_have_an_account__login_now_color"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="366dp"
						android:layout_height="60dp"
						android:text="@string/hello__register_to_get_started_string"
						 />

				</RelativeLayout>
				<RelativeLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content">
					<RadioGroup
						android:id="@+id/radioGroup"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="170dp"
						android:background="@drawable/rectangle_4_ek3_shape"
						android:layout_marginStart="20dp"
						android:orientation="horizontal">
						<RadioButton
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:textStyle="bold"
							android:padding="10dp"
							android:textSize="20sp"
							android:textColor="@color/confirm_password_color"

							android:text="Male"/>
						<RadioButton
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:textStyle="bold"
							android:textSize="20sp"
							android:padding="10dp"
							android:textColor="@color/confirm_password_color"

							android:text="Female"/>

					</RadioGroup>
				</RelativeLayout>


				<RelativeLayout android:id="@+id/back"
					android:layout_marginTop="56dp"
					android:layout_marginStart="22dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/rectangle_161"
						android:background="@drawable/rectangle_161_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="43dp"
						android:layout_height="43dp" />


					<RelativeLayout android:id="@+id/back_arrow"
						android:layout_marginTop="11dp"
						android:layout_marginStart="10dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<ImageView android:id="@+id/vector"
							android:src="@drawable/vector"
							android:contentDescription="vector"
							 android:layout_marginStart="4.95dp"
							android:layout_marginTop="2.08dp"
							android:layout_width="8.5dp"
							android:layout_height="14.86dp" />

					</RelativeLayout>

				</RelativeLayout>

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>