<HorizontalScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

<!--    <ScrollView android:id="@+id/forgot_password"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="match_parent" >-->

        <RelativeLayout android:id="@+id/content_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >



            <RelativeLayout android:id="@+id/page_forgot_password_ek1"
                android:layout_marginTop="0dp"
                android:layout_marginStart="0dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <View   android:id="@+id/_bg__forgot_password_ek2"
                    android:background="@drawable/_bg__forgot_password_ek2_shape"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="375dp"
                    android:layout_height="812dp" />


                <RelativeLayout
                    android:id="@+id/forgot_password_ek3"
                    android:layout_width="match_parent"
                    android:layout_height="732dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="90dp">


                    <RelativeLayout
                        android:id="@+id/iphone_x_home_indicator_home_indicator___on_light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="688dp">

                        <View
                            android:id="@+id/rectangle_24"
                            android:layout_width="134dp"
                            android:layout_height="5dp"
                            android:layout_marginStart="121dp"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/rectangle_24_shape" />

                    </RelativeLayout>


                    <RelativeLayout
                        android:id="@+id/button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="76dp"
                        android:layout_marginTop="504dp">

                        <View
                            android:id="@+id/container"
                            android:layout_width="210dp"
                            android:layout_height="58dp"
                            android:layout_marginStart="7dp"
                            android:layout_marginTop="0dp"
                            android:background="@drawable/container_shape" />

                        <TextView
                            android:id="@+id/text"

                            android:layout_width="236dp"
                            android:layout_height="31dp"
                            android:layout_gravity="center_horizontal|center"
                            android:layout_marginLeft="-2dp"
                            android:layout_marginTop="12dp"
                            android:gravity="center"
                            android:text="@string/text_string"
                            android:textColor="@color/_bg__forgot_password_ek2_color"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/heading_text"

                        android:layout_width="230dp"
                        android:layout_height="48dp"
                        android:layout_marginLeft="52dp"
                        android:layout_marginTop="292dp"
                        android:text="@string/heading_text_string"
                        android:textColor="@color/already_have_an_account__login_now_color"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/body_text"

                        android:layout_width="271dp"
                        android:layout_height="62dp"
                        android:layout_marginLeft="52dp"
                        android:layout_marginTop="336dp"
                        android:text="@string/body_text_string"
                        android:textColor="@color/body_text_color"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/forgotEmail"
                        android:layout_width="280dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="420dp"
                        android:background="@drawable/rectangle_161_shape"
                        android:hint="Email"
                        android:paddingStart="20dp" />

                    <!--                    <EditText android:id="@+id/email"-->

                    <!--                        android:textSize="12sp"-->
                    <!--                        android:textColor="@color/body_text_color"-->
                    <!--                        android:layout_marginLeft="52dp"-->
                    <!--                        android:layout_marginTop="432dp"-->
                    <!--                        android:layout_width="164dp"-->
                    <!--                        android:layout_height="26dp"-->
                    <!--                        android:text="@string/email_string"-->
                    <!--                        />-->

                    <!--                    <View   android:id="@+id/email_line"-->
                    <!--                        android:background="@drawable/email_line_shape"-->
                    <!--                        android:layout_marginStart="52dp"-->
                    <!--                        android:layout_marginTop="458dp"-->
                    <!--                        android:layout_width="263dp"-->
                    <!--                        android:layout_height="1dp" />-->

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="195dp"
                        android:layout_height="228dp"
                        android:layout_marginStart="90dp"
                        android:layout_marginTop="0dp"
                        android:contentDescription="image"
                        android:src="@drawable/image" />

                </RelativeLayout>

            </RelativeLayout>
        </RelativeLayout>

<!--    </ScrollView>-->
</HorizontalScrollView>